--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           <span></span>
         </a>
         <div class="header__top">
-          <div class="header__top-inner">
+          <div class="header__top-inner header__top--scroll">
             <a href="" class="header__top-logo heading">
               COFFEE HOUSE
             </a>
-            <nav class="header__top-nav">
+            <nav class="header__top-nav header__top-nav--scroll">
               <ul class="nav__list">
                 <li class="nav__list-item">
                   <a href="#body" class="nav__list-link">
